gen/GrammarParser.ts
// Generated from d:/Projects/compiler/GrammarParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import GrammarParserListener from "./GrammarParserListener.js";
import GrammarParserVisitor from "./GrammarParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class GrammarParser extends Parser {
	public static readonly NG_FOR = 1;
	public static readonly NG_IF = 2;
	public static readonly IMPORT = 3;
	public static readonly CLASS = 4;
	public static readonly CONST = 5;
	public static readonly LET = 6;
	public static readonly VAR = 7;
	public static readonly FUNCTION = 8;
	public static readonly RETURN = 9;
	public static readonly IF = 10;
	public static readonly ELSE = 11;
	public static readonly FOR = 12;
	public static readonly WHILE = 13;
	public static readonly ARROW = 14;
	public static readonly FROM = 15;
	public static readonly DO = 16;
	public static readonly IN = 17;
	public static readonly EXPORT = 18;
	public static readonly SELECTOR = 19;
	public static readonly COMPONENT = 20;
	public static readonly TEMPLATE = 21;
	public static readonly AS = 22;
	public static readonly TYPE = 23;
	public static readonly OF = 24;
	public static readonly TRUE = 25;
	public static readonly FALSE = 26;
	public static readonly ID = 27;
	public static readonly NUMBER = 28;
	public static readonly STRING = 29;
	public static readonly ASSIGN = 30;
	public static readonly PLUS = 31;
	public static readonly MINUS = 32;
	public static readonly MULT = 33;
	public static readonly DOUBLE_ASSIGN = 34;
	public static readonly NOT_EQUAL = 35;
	public static readonly DOUBLE_ASSIGN_ID = 36;
	public static readonly LBRACE = 37;
	public static readonly RBRACE = 38;
	public static readonly LBRACKET = 39;
	public static readonly RBRACKET = 40;
	public static readonly COLON = 41;
	public static readonly COMMA = 42;
	public static readonly SEMICOLON = 43;
	public static readonly DOT = 44;
	public static readonly WHITESPACE = 45;
	public static readonly COMMENT = 46;
	public static readonly LPAREN = 47;
	public static readonly RPAREN = 48;
	public static readonly LTAG = 49;
	public static readonly RTAG = 50;
	public static readonly SLASH = 51;
	public static readonly PLUSPLUS = 52;
	public static readonly MINUSMINUS = 53;
	public static readonly QMARK = 54;
	public static readonly EMARK = 55;
	public static readonly DOUBLE_QMARK = 56;
	public static readonly OR = 57;
	public static readonly AND = 58;
	public static readonly BACKTICK = 59;
	public static readonly LTAG_HTML = 60;
	public static readonly LBRACE_HTML = 61;
	public static readonly RBRACE_HTML = 62;
	public static readonly BACKTICK_HTML = 63;
	public static readonly TEXT_HTML = 64;
	public static readonly WS = 65;
	public static readonly DIV = 66;
	public static readonly P = 67;
	public static readonly H1 = 68;
	public static readonly H2 = 69;
	public static readonly H3 = 70;
	public static readonly H4 = 71;
	public static readonly H5 = 72;
	public static readonly H6 = 73;
	public static readonly BUTTON = 74;
	public static readonly SPAN = 75;
	public static readonly A = 76;
	public static readonly IMG = 77;
	public static readonly INPUT = 78;
	public static readonly FORM = 79;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_return = 2;
	public static readonly RULE_ifBody = 3;
	public static readonly RULE_ifStatement = 4;
	public static readonly RULE_iterationStatement = 5;
	public static readonly RULE_functionDeclaration = 6;
	public static readonly RULE_functionBody = 7;
	public static readonly RULE_functionCall = 8;
	public static readonly RULE_variableDeclaration = 9;
	public static readonly RULE_variableAssign = 10;
	public static readonly RULE_importStatement = 11;
	public static readonly RULE_defaultImport = 12;
	public static readonly RULE_namedImports = 13;
	public static readonly RULE_importSpecifier = 14;
	public static readonly RULE_exportStatement = 15;
	public static readonly RULE_classDeclaration = 16;
	public static readonly RULE_classBody = 17;
	public static readonly RULE_classBodyStatement = 18;
	public static readonly RULE_componentStatement = 19;
	public static readonly RULE_typeDefine = 20;
	public static readonly RULE_typeDeclaration = 21;
	public static readonly RULE_typeDeclarationValue = 22;
	public static readonly RULE_typeObject = 23;
	public static readonly RULE_typeMember = 24;
	public static readonly RULE_asType = 25;
	public static readonly RULE_value = 26;
	public static readonly RULE_primaryValue = 27;
	public static readonly RULE_binaryOp = 28;
	public static readonly RULE_increase_variable = 29;
	public static readonly RULE_decrease_variable = 30;
	public static readonly RULE_comparison = 31;
	public static readonly RULE_object = 32;
	public static readonly RULE_pair = 33;
	public static readonly RULE_array = 34;
	public static readonly RULE_arrayAccess = 35;
	public static readonly RULE_htmlElementName = 36;
	public static readonly RULE_open_tag = 37;
	public static readonly RULE_attributes = 38;
	public static readonly RULE_attribute = 39;
	public static readonly RULE_attributeValue = 40;
	public static readonly RULE_interpolation = 41;
	public static readonly RULE_close_tag = 42;
	public static readonly RULE_single_tag = 43;
	public static readonly RULE_html = 44;
	public static readonly literalNames: (string | null)[] = [ null, "'*ngFor'", 
                                                            "'*ngIf'", "'import'", 
                                                            "'class'", "'const'", 
                                                            "'let'", "'var'", 
                                                            "'function'", 
                                                            "'return'", 
                                                            "'if'", "'else'", 
                                                            "'for'", "'while'", 
                                                            "'=>'", "'from'", 
                                                            "'do'", "'in'", 
                                                            "'export'", 
                                                            "'selector'", 
                                                            "'@component'", 
                                                            "'template'", 
                                                            "'as'", "'type'", 
                                                            "'of'", "'true'", 
                                                            "'false'", null, 
                                                            null, null, 
                                                            "'='", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'=='", "'!=='", 
                                                            "'==='", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "':'", 
                                                            "','", "';'", 
                                                            "'.'", null, 
                                                            null, "'('", 
                                                            "')'", null, 
                                                            "'>'", "'/'", 
                                                            "'++'", "'--'", 
                                                            "'?'", "'!'", 
                                                            "'??'", "'||'", 
                                                            "'&&'", null, 
                                                            null, "'{{'", 
                                                            "'}}'", null, 
                                                            null, null, 
                                                            "'div'", "'p'", 
                                                            "'h1'", "'h2'", 
                                                            "'h3'", "'h4'", 
                                                            "'h5'", "'h6'", 
                                                            "'button'", 
                                                            "'span'", "'a'", 
                                                            "'img'", "'input'", 
                                                            "'form'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "NG_FOR", 
                                                             "NG_IF", "IMPORT", 
                                                             "CLASS", "CONST", 
                                                             "LET", "VAR", 
                                                             "FUNCTION", 
                                                             "RETURN", "IF", 
                                                             "ELSE", "FOR", 
                                                             "WHILE", "ARROW", 
                                                             "FROM", "DO", 
                                                             "IN", "EXPORT", 
                                                             "SELECTOR", 
                                                             "COMPONENT", 
                                                             "TEMPLATE", 
                                                             "AS", "TYPE", 
                                                             "OF", "TRUE", 
                                                             "FALSE", "ID", 
                                                             "NUMBER", "STRING", 
                                                             "ASSIGN", "PLUS", 
                                                             "MINUS", "MULT", 
                                                             "DOUBLE_ASSIGN", 
                                                             "NOT_EQUAL", 
                                                             "DOUBLE_ASSIGN_ID", 
                                                             "LBRACE", "RBRACE", 
                                                             "LBRACKET", 
                                                             "RBRACKET", 
                                                             "COLON", "COMMA", 
                                                             "SEMICOLON", 
                                                             "DOT", "WHITESPACE", 
                                                             "COMMENT", 
                                                             "LPAREN", "RPAREN", 
                                                             "LTAG", "RTAG", 
                                                             "SLASH", "PLUSPLUS", 
                                                             "MINUSMINUS", 
                                                             "QMARK", "EMARK", 
                                                             "DOUBLE_QMARK", 
                                                             "OR", "AND", 
                                                             "BACKTICK", 
                                                             "LTAG_HTML", 
                                                             "LBRACE_HTML", 
                                                             "RBRACE_HTML", 
                                                             "BACKTICK_HTML", 
                                                             "TEXT_HTML", 
                                                             "WS", "DIV", 
                                                             "P", "H1", 
                                                             "H2", "H3", 
                                                             "H4", "H5", 
                                                             "H6", "BUTTON", 
                                                             "SPAN", "A", 
                                                             "IMG", "INPUT", 
                                                             "FORM" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "return", "ifBody", "ifStatement", "iterationStatement", 
		"functionDeclaration", "functionBody", "functionCall", "variableDeclaration", 
		"variableAssign", "importStatement", "defaultImport", "namedImports", 
		"importSpecifier", "exportStatement", "classDeclaration", "classBody", 
		"classBodyStatement", "componentStatement", "typeDefine", "typeDeclaration", 
		"typeDeclarationValue", "typeObject", "typeMember", "asType", "value", 
		"primaryValue", "binaryOp", "increase_variable", "decrease_variable", 
		"comparison", "object", "pair", "array", "arrayAccess", "htmlElementName", 
		"open_tag", "attributes", "attribute", "attributeValue", "interpolation", 
		"close_tag", "single_tag", "html",
	];
	public get grammarFileName(): string { return "GrammarParser.g4"; }
	public get literalNames(): (string | null)[] { return GrammarParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return GrammarParser.symbolicNames; }
	public get ruleNames(): string[] { return GrammarParser.ruleNames; }
	public get serializedATN(): number[] { return GrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, GrammarParser._ATN, GrammarParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, GrammarParser.RULE_program);
		let _la: number;
		try {
			localctx = new ProgramRuleContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 90;
				(localctx as ProgramRuleContext)._statement = this.statement();
				(localctx as ProgramRuleContext)._statements.push((localctx as ProgramRuleContext)._statement);
				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1049966584) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 231052309) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, GrammarParser.RULE_statement);
		let _la: number;
		try {
			this.state = 133;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				localctx = new StmtFunctionDeclContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 95;
				(localctx as StmtFunctionDeclContext)._decl = this.functionDeclaration();
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 96;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 2:
				localctx = new StmtFunctionCallContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 99;
				(localctx as StmtFunctionCallContext)._call = this.functionCall();
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 100;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 3:
				localctx = new StmtVarDeclContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 103;
				(localctx as StmtVarDeclContext)._vardecl = this.variableDeclaration();
				this.state = 105;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 104;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 4:
				localctx = new StmtVarAssignContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 107;
				(localctx as StmtVarAssignContext)._varassign = this.variableAssign();
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 108;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 5:
				localctx = new StmtValueContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 111;
				(localctx as StmtValueContext)._val = this.value(0);
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 112;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 6:
				localctx = new StmtHtmlContext(this, localctx);
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 115;
				(localctx as StmtHtmlContext)._h = this.html();
				this.state = 117;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 116;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 7:
				localctx = new StmtReturnContext(this, localctx);
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 119;
				(localctx as StmtReturnContext)._ret = this.return_();
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 120;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			case 8:
				localctx = new StmtIfContext(this, localctx);
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 123;
				(localctx as StmtIfContext)._ifstmt = this.ifStatement();
				}
				break;
			case 9:
				localctx = new StmtImportContext(this, localctx);
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 124;
				(localctx as StmtImportContext)._imp = this.importStatement();
				}
				break;
			case 10:
				localctx = new StmtIterationContext(this, localctx);
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 125;
				(localctx as StmtIterationContext)._loop = this.iterationStatement();
				}
				break;
			case 11:
				localctx = new StmtComponentContext(this, localctx);
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 126;
				(localctx as StmtComponentContext)._comp = this.componentStatement();
				}
				break;
			case 12:
				localctx = new StmtClassContext(this, localctx);
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 127;
				(localctx as StmtClassContext)._classDecl = this.classDeclaration();
				}
				break;
			case 13:
				localctx = new StmtExportContext(this, localctx);
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 128;
				(localctx as StmtExportContext)._exp = this.exportStatement();
				}
				break;
			case 14:
				localctx = new StmtTypeDeclContext(this, localctx);
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 129;
				(localctx as StmtTypeDeclContext)._typeDecl = this.typeDeclaration();
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===43) {
					{
					this.state = 130;
					this.match(GrammarParser.SEMICOLON);
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public return_(): ReturnContext {
		let localctx: ReturnContext = new ReturnContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, GrammarParser.RULE_return);
		try {
			localctx = new ReturnRuleContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 135;
			this.match(GrammarParser.RETURN);
			this.state = 136;
			(localctx as ReturnRuleContext)._expr = this.value(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifBody(): IfBodyContext {
		let localctx: IfBodyContext = new IfBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, GrammarParser.RULE_ifBody);
		let _la: number;
		try {
			localctx = new IfBodyRuleContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 138;
			this.match(GrammarParser.IF);
			this.state = 139;
			this.match(GrammarParser.LPAREN);
			this.state = 140;
			(localctx as IfBodyRuleContext)._left = this.value(0);
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 7) !== 0)) {
				{
				{
				this.state = 141;
				(localctx as IfBodyRuleContext).__tset214 = this._input.LT(1);
				_la = this._input.LA(1);
				if(!(((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 7) !== 0))) {
				    (localctx as IfBodyRuleContext).__tset214 = this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				(localctx as IfBodyRuleContext)._condOps.push((localctx as IfBodyRuleContext).__tset214);
				this.state = 142;
				(localctx as IfBodyRuleContext)._value = this.value(0);
				(localctx as IfBodyRuleContext)._right.push((localctx as IfBodyRuleContext)._value);
				}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 148;
			this.match(GrammarParser.RPAREN);
			this.state = 149;
			this.match(GrammarParser.LBRACE);
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1049966584) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 231052309) !== 0)) {
				{
				{
				this.state = 150;
				(localctx as IfBodyRuleContext)._statement = this.statement();
				(localctx as IfBodyRuleContext)._stmts.push((localctx as IfBodyRuleContext)._statement);
				}
				}
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 156;
			this.match(GrammarParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let localctx: IfStatementContext = new IfStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, GrammarParser.RULE_ifStatement);
		let _la: number;
		try {
			let _alt: number;
			localctx = new IfStatementRuleContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 158;
			(localctx as IfStatementRuleContext)._ifBody = this.ifBody();
			(localctx as IfStatementRuleContext)._ifBlocks.push((localctx as IfStatementRuleContext)._ifBody);
			this.state = 163;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 159;
					this.match(GrammarParser.ELSE);
					this.state = 160;
					(localctx as IfStatementRuleContext)._ifBody = this.ifBody();
					(localctx as IfStatementRuleContext)._elseIfs.push((localctx as IfStatementRuleContext)._ifBody);
					}
					}
				}
				this.state = 165;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			}
			this.state = 175;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===11) {
				{
				this.state = 166;
				this.match(GrammarParser.ELSE);
				this.state = 167;
				(localctx as IfStatementRuleContext)._elseBlock = this.match(GrammarParser.LBRACE);
				this.state = 171;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1049966584) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 231052309) !== 0)) {
					{
					{
					this.state = 168;
					(localctx as IfStatementRuleContext)._statement = this.statement();
					(localctx as IfStatementRuleContext)._elseStmts.push((localctx as IfStatementRuleContext)._statement);
					}
					}
					this.state = 173;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 174;
				this.match(GrammarParser.RBRACE);
				}
			}
